fixed tri section spacing

--- a/level5-C/lesson-05/main.css
+++ b/level5-C/lesson-05/main.css
@@ -211,7 +211,7 @@ body {
   }
   .html-lesson-wrapper .try-content {
     margin-top: clamp(20px, 3.7vw, 30px);
-    padding-left: clamp(11px, 2.4vw, 18px);
+    /* padding-left: clamp(11px, 2.4vw, 18px); */
   }
   .html-lesson-wrapper .try-content ul {
     margin-left: clamp(11px, 2.4vw, 18px);
